--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -36,7 +36,7 @@
     </li> 
 
     <li>
-    <a href="https://github.com/MarcoMoraes04">
+    <a href="https://github.com/maykbrito">
     Ver meu portfólio
     </a>
     </li>
@@ -50,16 +50,16 @@
     </li>
     </ul>
     <div id="social-links">
-    <a href="https://github.com/MarcoMoraes04"target="_blank">
+    <a href="https://github.com/maykbrito"target="_blank">
     <ion-icon  name="logo-github"></ion-icon> 
     </a>
     <a href="https://instagram.com/maykbrito" target="_blank">
     <ion-icon name= "logo-instagram"></ion-icon>
     </a>
-    <a href="https://youtube.com/MarcoMoraes04" target="_blank">
+    <a href="https://youtube.com/maykbrito" target="_blank">
     <ion-icon name="logo-youtube"></ion-icon>
     </a>
-    <a href="https://linkedin/in/MarcoMoraes04" target="_blank">
+    <a href="https://linkedin/in/maykbrito" target="_blank">
     <ion-icon name="logo-linkedin"></ion-icon>
     </a>  
     </div>
